# alleycat

./: .gitignore  .prettierignore  LICENSE  README.md  craco.config.js  package.json  postcss.config.js  pyproject.toml  setup.cfg  setup.py  tailwind.config.js  version.js
.github/workflows/: build.yml
alleycat_link/: __init__.py  extension.py  link.py  utils.py
app/: Cargo.toml  tauri.conf.json
app/src/: events.rs  link.rs  main.rs
docs/: conf.py  index.md  requirements.txt
docs/_static/: custom.css
docs/_templates/: layout.html
docs/_templates/sidebar/: brand.html
public/: index.html
src/: App.tsx  index.css  index.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  title_bar.rs
src/components/: Editor.tsx  EditorView.css  EditorView.debug.css  EditorView.tsx  Icon.tsx  MainScreen.tsx  PloverMenu.tsx  Settings.tsx  SettingsMenu.tsx  StenoNotesView.tsx  TitleBar.tsx  ToggleGroup.tsx  Toolbar.tsx  Version.tsx
src/extensions/: Paragraph.ts  link.ts  paragraph.ts  steno.ts
src/fonts/: BasierSquare.css  BasierSquareMono.css
src/hooks/: document.ts  notes.ts  settings.ts  window.ts
src/models/: document.ts  input.ts  link.ts  rtf.ts  settings.ts  steno.ts
src/platform/: base.ts  index.ts  link.ts  tauri.ts  types.ts  web.ts
src/utils/: node.ts  query.ts  tauri.ts  transform.ts
