[metadata]
name = alleycat-link
description = Plover plugin for communication with AlleyCAT
long_description = file:README.md
long_description_content_type = text/markdown
url = https://github.com/sammdot/alleycat
keywords = plover plover_plugin
classifiers =
  Programming Language :: Python :: 3.6
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9

[options]
zip_safe = True
setup_requires =
  setuptools>=30.3.0
install_requires =
  plover>=4.0.0.dev10
  pynng
packages =
  alleycat_link

[options.entry_points]
plover.extension =
  alleycat_link = alleycat_link:AlleyCATLinkExtension
