[package]
name = "alleycat"
version = "0.1.0"
description = "Free computer-aided transcription suite for stenographers"
authors = ["Sammi de Guzman <sammi@sammdot.ca>"]
license = ""
repository = ""
default-run = "alleycat"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-create-dir", "fs-read-dir", "fs-read-file", "fs-write-file", "path-all", "window-center", "window-close", "window-create", "window-maximize", "window-set-title", "window-show", "window-start-dragging", "window-unmaximize"] }
uuid = { version = "1.1.2", features = ["v4"] }

[target."cfg(target_os = \"macos\")".dependencies]
cocoa = "0.24.0"

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "alleycat"
