[package]
name = "alleycat"
version = "0.1.0"
description = "Free computer-aided transcription suite for stenographers"
authors = ["Sammi de Guzman <sammi@sammdot.ca>"]
license = ""
repository = ""
default-run = "alleycat"
edition = "2021"
rust-version = "1.57"

[build-dependencies]
tauri-build = { version = "1.0.4", features = [] }

[dependencies]
cocoa = "0.24.0"
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.0.5", features = ["dialog-ask", "dialog-message", "dialog-open", "dialog-save", "fs-read-file", "fs-write-file", "path-all", "window-close", "window-maximize", "window-start-dragging", "window-unmaximize"] }

[features]
default = [ "custom-protocol" ]
custom-protocol = [ "tauri/custom-protocol" ]

[[bin]]
name = "alleycat"
